--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="color_2B2B2B">#2B2B2B</color>
     <color name="color_05A9FE">#05A9FE</color>
     <color name="color_E22E37">#E22E37</color>
+    <color name="color_EEEEEE">#eeeeee</color>
 </resources>
