--- a/app/src/main/res/layout/activity_view_pager.xml
+++ b/app/src/main/res/layout/activity_view_pager.xml
@@ -9,25 +9,9 @@
         android:id="@+id/common_top"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
-    <LinearLayout
-        android:id="@+id/home_entrance"
+
+    <com.congda.tianjianxin.widget.ViewPagerTitle
+        android:id="@+id/vp_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="150dp"/>
-        <LinearLayout
-            android:id="@+id/llcontain"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="10dp"
-            android:orientation="horizontal" >
-        </LinearLayout>
-    </LinearLayout>
+        android:layout_height="wrap_content"/>
 </LinearLayout>
