--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -94,6 +94,12 @@
                 android:text="分页状态栏"
                 android:textAllCaps="false"
                 android:id="@+id/btn14"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="下载资源"
+                android:textAllCaps="false"
+                android:id="@+id/btn15"/>
             <ImageView
                 android:id="@+id/iv1"
                 android:layout_width="100dp"
