--- a/app/src/main/res/layout/item_emoji.xml
+++ b/app/src/main/res/layout/item_emoji.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="match_parent"
-             android:layout_height="420dp">
+    android:layout_width="match_parent"
+    android:layout_height="35dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
+        android:padding="5dp"
         android:orientation="vertical">
         <ImageView
             android:id="@+id/entrance_image"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:scaleType="fitCenter"/>
 
         <TextView
