--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -100,6 +100,12 @@
                 android:text="Service下载资源"
                 android:textAllCaps="false"
                 android:id="@+id/btn15"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="基本动画"
+                android:textAllCaps="false"
+                android:id="@+id/btn16"/>
             <ImageView
                 android:id="@+id/iv1"
                 android:layout_width="100dp"
