--- a/app/src/main/res/layout/activity_animation.xml
+++ b/app/src/main/res/layout/activity_animation.xml
@@ -64,15 +64,29 @@
         android:textColor="@color/white"
         android:text="旋转动画"/>
 
-    <ImageView
-        android:id="@+id/im_iv_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
-        android:layout_marginRight="20dp"
-        android:src="@mipmap/ic_launcher" />
+        android:orientation="horizontal">
 
+        <ImageView
+            android:id="@+id/im_iv_open"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="70dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"
+            android:src="@drawable/im_open_loading" />
+        <ImageView
+            android:id="@+id/im_iv_add"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="70dp"
+            android:layout_centerVertical="true"
+            android:layout_gravity="center"
+            android:layout_marginRight="20dp"
+            android:src="@mipmap/icon_loading_circle_blue" />
+    </LinearLayout>
 </LinearLayout>
