--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="color_EEEEEE">#eeeeee</color>
     <color name="color_969696">#969696</color>
     <color name="color_323232">#323232</color>
+    <color name="color_e91b04">#e91b04</color>
 </resources>
