--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -112,6 +112,18 @@
                 android:text="跳转方式"
                 android:textAllCaps="false"
                 android:id="@+id/btn17"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="腾讯云播放器"
+                android:textAllCaps="false"
+                android:id="@+id/btn18"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="高仿微信录制"
+                android:textAllCaps="false"
+                android:id="@+id/btn19"/>
             <ImageView
                 android:id="@+id/iv1"
                 android:layout_width="100dp"
