--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -124,6 +124,12 @@
                 android:text="高仿微信录制"
                 android:textAllCaps="false"
                 android:id="@+id/btn19"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:text="dialogFragment"
+                android:textAllCaps="false"
+                android:id="@+id/btn20"/>
             <ImageView
                 android:id="@+id/iv1"
                 android:layout_width="100dp"
@@ -132,6 +138,8 @@
                 android:src="@mipmap/app_logo"
                 android:layout_marginBottom="20dp"
                 android:layout_marginTop="30dp"/>
+
+
         </LinearLayout>
     </LinearLayout>
 </ScrollView>
