--- a/app/src/main/res/layout/layout_viewpager_title.xml
+++ b/app/src/main/res/layout/layout_viewpager_title.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_root"
     android:orientation="vertical">
     <androidx.viewpager.widget.ViewPager
         android:id="@+id/view_pager"
