--- a/baselibrary/src/main/res/values/styles.xml
+++ b/baselibrary/src/main/res/values/styles.xml
@@ -69,6 +69,11 @@
         <item name="android:windowEnterAnimation" >@anim/slide_bottom_in</item>
         <item name="android:windowExitAnimation" >@anim/slide_bottom_out</item>
     </style>
+
+    <style name="DialogZoomAnimations">
+        <item name="android:windowEnterAnimation" >@anim/zoomin</item>
+        <item name="android:windowExitAnimation" >@anim/zoomout</item>
+    </style>
     <style name="Theme.Light.NoTitle.Dialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
@@ -78,4 +83,15 @@
     <style name="Theme.Light.NoTitle.NoShadow.Dialog" parent="Theme.Light.NoTitle.Dialog">
         <item name="android:backgroundDimEnabled">false</item>
     </style>
+
+    <style name="dialog2" parent="AppTheme">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!--显示区域以外是否使用黑色半透明背景-->
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
 </resources>
